2003.06.17
  - Made the editor's image renderer faster

2003.06.14
  - Added GetMapEngine().save(filename)

2003.06.13
  - made AttachInput work with the joystick aswell as the keyboard

2003.06.11
  - fixed bug where maps smaller than the screen would repeat themselves
  - added option for repeating maps

2003.06.10
  - added flatten all visible layers to the editor

2003.06.08
  - Flik added
    spriteset.filename
    spriteset.save(filename)
    RestartGame()
  - Gau added
    HashByteArray(byte_array)
    HashFromFile(filename)

2003.05.14
  - adding drawText/drawZoomedText/drawTextBox surface methods
  - added surface.save(filename)

2003.05.12
  - adding support for joysticks in linux/unix

2003.05.11
  - engine title now says the game name that you're playing instead of "Sphere"

2003.05.06
  - added ability to view tile obstructions from within editor
  - added font.getColorMask(), windowstyle.setColorMask(color) and windowstyle.getColorMask()

2003.05.04
  - fixes so that the SDL subsystem sort of compiles
  - fixed SetTileImage blend-mode bug

2003.05.01
  - added a linux doc for compiling sphere on linux
  - fixes so scons compiles in linux
  
2003.04.25
  - fixed MapView->View Grid so it takes into account zoom factors
  - fixed bug where map editor would crash if you used "Select Tile" on out of range tiles

2003.04.21
  - added playlist system script
  - added more menu items to the Edit Range menu in tile-view and spriteset-view
  - changed version number to 1.1

2003.04.17
  - added SetPersonAngle and GetPersonAngle
  
2003.04.16
  - added GetPersonBase (cheap alternative to GetPersonSpriteset(name).base)

2003.03.17
  - added surface_object.triangle(x1, y1, x2, y2, x3, y3, color)

2003.03.10
  - rearranged imageview paste menu items into a paste submenu
  - added paste->Into Selection
  - added SetDefaultMapScript and CallDefaultMapScript

2003.03.08
  - added a selection tool to the image editor