@@ -1,5 +1,6 @@
 2003.06.17
   - Made the editor's image renderer faster
+  - Added surface.applyLookup()
 
 2003.06.14
   - Added GetMapEngine().save(filename)
